# postgres_cmake

./: .gitignore  .travis.yml  CMakeLists.txt  PGXS.cmake.in  README  README.cmake  README.md
cmake/: CheckCpuID.cmake  CheckFlexibleArray.cmake  CheckLLConstants.cmake  CheckRestrict.cmake  CheckSSE42.cmake  CheckSnprintfLongLongIntModifier.cmake  CheckTypeAlignment.cmake  FindLDAP.cmake  FindLibSocket.cmake  FindLibUUID.cmake  FindReadline.cmake  FindSELinux.cmake  FuncAcceptArgtypes.cmake  GenDef.cmake  MakeNLS.cmake  RegressCheck.cmake  ReplacePython.cmake
contrib/: CMakeLists.txt
contrib/adminpack/: CMakeLists.txt
contrib/amcheck/: CMakeLists.txt
contrib/auth_delay/: CMakeLists.txt
contrib/auto_explain/: CMakeLists.txt
contrib/bloom/: CMakeLists.txt
contrib/btree_gin/: CMakeLists.txt
contrib/btree_gist/: CMakeLists.txt
contrib/chkpass/: CMakeLists.txt
contrib/citext/: CMakeLists.txt
contrib/cube/: CMakeLists.txt
contrib/dblink/: CMakeLists.txt
contrib/dict_int/: CMakeLists.txt
contrib/dict_xsyn/: CMakeLists.txt
contrib/earthdistance/: CMakeLists.txt
contrib/file_fdw/: CMakeLists.txt
contrib/fuzzystrmatch/: CMakeLists.txt
contrib/hstore/: CMakeLists.txt
contrib/hstore_plperl/: CMakeLists.txt
contrib/hstore_plpython/: CMakeLists.txt
contrib/intarray/: CMakeLists.txt
contrib/isn/: CMakeLists.txt
contrib/lo/: CMakeLists.txt
contrib/ltree/: CMakeLists.txt
contrib/ltree_plpython/: CMakeLists.txt
contrib/oid2name/: CMakeLists.txt
contrib/pageinspect/: CMakeLists.txt
contrib/passwordcheck/: CMakeLists.txt
contrib/pg_buffercache/: CMakeLists.txt
contrib/pg_freespacemap/: CMakeLists.txt
contrib/pg_prewarm/: CMakeLists.txt
contrib/pg_standby/: CMakeLists.txt
contrib/pg_stat_statements/: CMakeLists.txt
contrib/pg_trgm/: CMakeLists.txt
contrib/pg_visibility/: CMakeLists.txt
contrib/pgcrypto/: CMakeLists.txt  rijndael.c
contrib/pgrowlocks/: CMakeLists.txt
contrib/pgstattuple/: CMakeLists.txt
contrib/postgres_fdw/: CMakeLists.txt
contrib/seg/: CMakeLists.txt
contrib/sepgsql/: CMakeLists.txt
contrib/spi/: CMakeLists.txt
contrib/sslinfo/: CMakeLists.txt
contrib/tablefunc/: CMakeLists.txt
contrib/tcn/: CMakeLists.txt
contrib/test_decoding/: CMakeLists.txt
contrib/tsearch2/: CMakeLists.txt
contrib/tsm_system_rows/: CMakeLists.txt
contrib/tsm_system_time/: CMakeLists.txt
contrib/unaccent/: CMakeLists.txt
contrib/uuid-ossp/: CMakeLists.txt  uuid-ossp.c
contrib/vacuumlo/: CMakeLists.txt
contrib/xml2/: CMakeLists.txt
src/: CMakeLists.txt
src/backend/: CMakeLists.txt
src/backend/access/gin/: ginbtree.c
src/backend/libpq/: auth.c
src/backend/snowball/: CMakeLists.txt
src/backend/tsearch/dicts/: hunspell_sample.affix
src/backend/utils/adt/: pg_locale.c
src/backend/utils/fmgr/: fmgr.c
src/backend/utils/mb/conversion_procs/: CMakeLists.txt
src/common/: CMakeLists.txt  exec.c  restricted_token.c
src/fe_utils/: CMakeLists.txt
src/include/: CMakeLists.txt  c.h  fmgr.h  pg_config.h.in  pg_config_cmake.in  pg_config_ext_cmake.in  pg_config_paths_cmake.in  port.h
src/include/port/: win32.h
src/interfaces/ecpg/compatlib/: CMakeLists.txt
src/interfaces/ecpg/ecpglib/: CMakeLists.txt
src/interfaces/ecpg/include/: CMakeLists.txt  ecpg_config_cmake.in
src/interfaces/ecpg/pgtypeslib/: CMakeLists.txt
src/interfaces/ecpg/preproc/: CMakeLists.txt
src/interfaces/ecpg/test/: CMakeLists.txt
src/interfaces/libpq/: CMakeLists.txt  fe-connect.c
src/pl/plperl/: CMakeLists.txt
src/pl/plpgsql/src/: CMakeLists.txt
src/pl/plpython/: CMakeLists.txt
src/pl/tcl/: CMakeLists.txt
src/port/: CMakeLists.txt  Makefile  chklocale.c  path.c  pg_putenv_proxy.c  unsetenv.c  win32env.c
src/test/isolation/: CMakeLists.txt
src/test/modules/: CMakeLists.txt
src/test/modules/brin/: CMakeLists.txt
src/test/modules/commit_ts/: CMakeLists.txt
src/test/modules/dummy_seclabel/: CMakeLists.txt
src/test/modules/snapshot_too_old/: CMakeLists.txt
src/test/modules/test_ddl_deparse/: CMakeLists.txt
src/test/modules/test_extensions/: CMakeLists.txt
src/test/modules/test_parser/: CMakeLists.txt
src/test/modules/test_pg_dump/: CMakeLists.txt
src/test/modules/test_rls_hooks/: CMakeLists.txt
src/test/modules/test_shm_mq/: CMakeLists.txt
src/test/recovery/: CMakeLists.txt
src/test/regress/: CMakeLists.txt  pg_regress.c  regress.c
src/test/ssl/: CMakeLists.txt
src/timezone/: CMakeLists.txt  Makefile
src/tools/msvc/: gendef.pl
